# snipinator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE.md  README.md  README.md.jinja2  deps-licenses.json  dev-deps-licenses.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: FUNDING.yml  README.md.jinja2  README.remotified.md  demo.tape  dependencies.yml  license-header.md
.github/workflows/: build-and-test.yml  ci.yml
scripts/: act.sh  deploy-to-pypi.sh  format.sh  generate-animation.sh  generate-examples.sh  generate-licenses.sh  generate-readme.sh  generate-tests.sh  generate.sh  pin-dev-reqs.py  pin-dev-reqs.sh  pin-extra-reqs.py  pin-extra-reqs.sh  pre.sh  precommit.sh  prettier.sh  quickrun.sh  requirements-dev.txt  run-all-examples.sh  run-all-tests.sh  run-edit-mode-generate-animation.sh  run-edit-mode-smoke-test.sh  run-wheel-smoke-test.sh  type-check.sh
scripts/utilities/: act.sh  changeguard.sh  common.sh  deploy-to-ghr.sh  ensure-py-version.sh  ensure-pyenv.sh  ensure-reqs.sh  ensure-venv.sh  is_not_dirty.sh  load-venv.sh  mark_dirty.sh  pin-extra-reqs.py
snipinator/: __init__.py  cli.py  snipinate.py  snipinate_test.py
snipinator/cli_tests/: backup_test.sh  check_test.sh  fails_out_of_project_test.sh  mv_test.sh  mv_test.sh.jinja2  newlines_test.sh  rm_mv_test.sh  rm_test.sh  shell_delims_test.sh  stdin_test.sh  warning_test.sh
snipinator/examples/: EXAMPLE.generated.md  EXAMPLE.md.jinja2  LONG-EXAMPLE.generated.md  LONG-EXAMPLE.md.jinja2  SIMPLE.generated.md  SIMPLE.md.jinja2  code.py  code_test.py  example.sh  example_example.sh  example_example.sh.jinja2  local-docker_example.sh  long-example.sh  remote-docker_example-noautorun.sh  simple_example.sh  simple_example.sh.jinja2
snipinator/private/: utilities.py
