[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snipinator"
version = "1.2.0"
description = "Python code snippets for markdown files, e.g READMEs, from actual (testable) code."
authors = [{name = "AYF", email = "realazthat@gmail.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12'
]
dependencies = [
  "colorama >=0.4,<1",
  "defusedxml >=0.7,<1",
  'importlib-metadata; python_version < "3.8"',
  "Jinja2 >=3,<4",
  "markdown-it-py >=3,<4",
  "MarkupSafe >=2,<3",
  "mdurl <1",
  "pexpect >4,<5",
  "ptyprocess >=0.7,<0.8",
  "Pygments >=2,<3",
  "rich >=13,<14",
  "rich-argparse >=1,<2",
  "types-colorama >=0.4,<1"
]
keywords = [
  "github",
  "testing",
  "markdown",
  "readme",
  "snippets",
  "documentation",
  "jinja2",
  "templates",
  "preprocessor",
  "documentation-tool",
  "include",
  "readme-template",
  "readme-md",
  "dynamic-documentation"
]

[project.optional-dependencies]
# Set of dependencies that are known to work. To add a new dependency here, add
# a version range to the `projecct.dependencies` section above, and then run
# `EXTRA=prod bash scripts/pin-extra-reqs.sh`. Optionally, delete all the
# contents to repin all the dependencies (probably a good idea to do once in a
# while).
prod = [
  "colorama==0.4.6",
  "defusedxml==0.7.1",
  "jinja2==3.1.3",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdurl==0.1.2",
  "pexpect==4.9.0",
  "ptyprocess==0.7.0",
  "pygments==2.17.2",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "types-colorama==0.4.15.20240311",
  "typing-extensions==4.10.0"
]
# Set of dev dependencies, all pinned, so that they are known to work. To add a
# new dependency here, add the unpinned package name here, and then run
# `EXTRA=dev bash scripts/pin-extra-reqs.sh`.
dev = [
  "argcomplete==3.2.3",
  "autoflake==2.3.1",
  "build==1.0.3",
  "certifi==2024.2.2",
  "cffi==1.16.0",
  "cfgv==3.4.0",
  "changeguard==0.3.1",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "colorama==0.4.6",
  "cryptography==42.0.5",
  "defusedxml==0.7.1",
  "distlib==0.3.8",
  "docutils==0.20.1",
  "filelock==3.13.1",
  "identify==2.5.35",
  "idna==3.6",
  "importlib-metadata==7.0.2",
  "importlib-resources==6.3.1",
  "isort==5.13.2",
  "jaraco-classes==3.3.1",
  "jeepney==0.8.0",
  "jinja2==3.1.3",
  "keyring==24.3.1",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdformat==0.7.17",
  "mdformat-gfm==0.3.0",
  "mdformat-tables==0.4.1",
  "mdit-py-plugins==0.4.0",
  "mdurl==0.1.2",
  "more-itertools==10.2.0",
  "mypy==1.8.0",
  "mypy-extensions==1.0.0",
  "nh3==0.2.15",
  "nodeenv==1.8.0",
  "packaging==23.2",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "pip-licenses==4.3.4",
  "pip-tools==7.3.0",
  "pkginfo==1.9.6",
  "platformdirs==4.2.0",
  "pre-commit==3.5.0",
  "prettytable==3.10.0",
  "ptyprocess==0.7.0",
  "pycparser==2.21",
  "pyflakes==3.2.0",
  "pygments==2.17.2",
  "pyproject-hooks==1.0.0",
  "pyright==1.1.352",
  "pyyaml==6.0.1",
  "readme-renderer==43.0",
  "requests==2.31.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "secretstorage==3.3.3",
  "toml-sort==0.23.1",
  "tomli==2.0.1",
  "tomlkit==0.12.4",
  "twine==5.0.0",
  "types-colorama==0.4.15.20240311",
  "types-pyyaml==6.0.12.20240311",
  "typing-extensions==4.10.0",
  "urllib3==2.2.1",
  "virtualenv==20.25.0",
  "wcwidth==0.2.13",
  "wheel==0.43.0",
  "xmltodict==0.13.0",
  "yapf==0.40.2",
  "yq==3.2.3",
  "zipp==3.17.0"
]

[project.scripts]
snipinator = "snipinator.cli:main"

[project.urls]
Homepage = "https://github.com/realazthat/snipinator"
Documentation = "https://github.com/realazthat/snipinator"
Repository = "https://github.com/realazthat/snipinator"

[tool.setuptools]
packages = ["snipinator"]

[tool.snipinator-project-metadata]
last_unstable_release = "1.2.0"
last_stable_release = "1.2.0"

[tool.tomlsort]
